# YaProfiPI-2023

./: README.md
task_2/: Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
task_2/requirements/: requirements-dev.txt  requirements.txt
task_2/src/: main.py  settings.py
task_2/src/database/: __init__.py  group.py  participant.py  session_manager.py
task_2/src/database/migrations/: env.py
task_2/src/database/migrations/versions/: d1fbdd091d1a_.py
task_2/src/models/: error.py  group.py  participant.py
task_2/src/query/: group.py  participant.py
task_2/src/route/: group.py
